Notiz für möglichen künftigen Inhalt ergänzt

--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -91,5 +91,7 @@ Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nic
 
 Wenngleich die Schiedsgerichtsordnung zu einer bloß unrichtigen, d.h. prinzipiell nicht unterbliebenen, aber nicht vollständigen Rechtsmittelbelehrung schweigt, ist anzunehmen, dass dies zur gleichen Rechtsfolge führt: Sinn der \enquote{Fristverlängerung} ist, dass ein Fehler des Gerichts den Parteien nicht schaden soll. Zweck der Rechtsmittelbelehrung ist es, den Parteien den Zugang zu effektivem Rechtsschutz zu ermöglichen, ohne dass sie die Schiedsgerichtsordnung in all ihren Facetten kennen müssen. Da jeder Fehler eines Rechtsmittels dem Rechtsmittel gleichermaßen schadet, besteht kaum ein Unterschied zwischen einer fehlenden und einer unrichtigen Rechtsmittelbelehrung. Im Gegenteil können die Parteien auf den Inhalt der Rechtsmittelbelehrung vertrauen, der Schaden einer unrichtigen Belehrung könnte daher auch als größer angesehen werden als der einer unterbliebenen Belehrung. Auch bei einer fehlerhaften Rechtsmittelbelehrung \enquote{verlängert} sich die Frist also auf 3~Monate.
 
+% Eine \section zum Vergleich? Zulässigkeit, Unterschiede zu einem regulären Urteil in der Tenorierung und Begründung
+
 %\chapterbib
 % \end{refsection}
