Minimalkorrektur: Wort ergänzt.

--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -36,7 +36,7 @@ Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sin
 
 Die Entscheidungsformel ist der wichtigste Teil des Urteils. Sie ist besonders sorgfältig zu formulieren. Unterlaufen Fehler, kann das darin münden, dass keine konkreten Rechtsfolgen und/oder Handlungsanweisungen für die Parteien abgeleitet werden können, dass für etwas keine Rechtskraft erwächst oder aber etwas unbeabsichtigt nicht oder falsch gestaltet wird.
 
-Obwohl die Schiedsgerichtsordnung keine Regeln zur Vollstreckung\index[idx]{Vollstreckung} kennt (s.o.) und es daher regelmäßig den zum Tun oder Unterlassen verpflichteten Organen obliegt, die Urteile umzusetzen, sollte bei der Tenorierung unbedingt darauf geachtet werden, dass der Tenor \emph{vollstreckbar} ist. In der staatlichen Gerichtsbarkeit bedeutet Vollstreckung die zwangsweise Durchsetzung des Urteils. Sollen aber Zwangsmittel (wie bspw. Zwangsgelder, die eingetrieben werden, bis eine Verpflichtung aus einem Urteil erfüllt wurde) verhängt werden, soll also aus dem Tenor vollstreckt werden, so muss aus dem Tenor klar abzuleiten sein, welches Tun oder Unterlassen im Einzelnen erwartet wird. Die \enquote{Vollstreckbarkeit} eines Tenors bedeutet also, dass auch hohen Ansprüchen an Klarheit und Eindeutigkeit genügt: Die prinzipielle \enquote{Vollstreckbarkeit} liegt dann vor, wenn stets eindeutig feststellbar ist, ob die durch das Urteil Verpflichteten ihren jeweiligen Verpflichtungen nachkommen bzw. nachgekommen sind oder nicht. Dies dient einerseits der Verständlichkeit des Urteils, andererseits kann es ggf. auch die Vollstreckung vor einem staatlichen Gericht ermöglichen oder vereinfachen.
+Obwohl die Schiedsgerichtsordnung keine Regeln zur Vollstreckung\index[idx]{Vollstreckung} kennt (s.o.) und es daher regelmäßig den zum Tun oder Unterlassen verpflichteten Organen obliegt, die Urteile umzusetzen, sollte bei der Tenorierung unbedingt darauf geachtet werden, dass der Tenor \emph{vollstreckbar} ist. In der staatlichen Gerichtsbarkeit bedeutet Vollstreckung die zwangsweise Durchsetzung des Urteils. Sollen aber Zwangsmittel (wie bspw. Zwangsgelder, die eingetrieben werden, bis eine Verpflichtung aus einem Urteil erfüllt wurde) verhängt werden, soll also aus dem Tenor vollstreckt werden, so muss aus dem Tenor klar abzuleiten sein, welches Tun oder Unterlassen im Einzelnen erwartet wird. Die \enquote{Vollstreckbarkeit} eines Tenors bedeutet also, dass auch hohen Ansprüchen an Klarheit und Eindeutigkeit genügt wird: Die prinzipielle \enquote{Vollstreckbarkeit} liegt dann vor, wenn stets eindeutig feststellbar ist, ob die durch das Urteil Verpflichteten ihren jeweiligen Verpflichtungen nachkommen bzw. nachgekommen sind oder nicht. Dies dient einerseits der Verständlichkeit des Urteils, andererseits kann es ggf. auch die Vollstreckung vor einem staatlichen Gericht ermöglichen oder vereinfachen.
 
 Der einzige Tenor, der nicht der Vollstreckbarkeit zugänglich ist, ist die \emph{Feststellung}. Anstatt durch Urteil Rechte oder Pflichten aufzuerlegen, wird hier lediglich das Bestehen oder Nichtbestehen eines bestimmten Rechtsverhältnisses festgestellt (bspw. die Nichtigkeit einer Satzungsänderung oder einer Wahl). Diese Feststellung ist so nicht vollstreckbar; die Existenz oder Nichtexistenz einer Rechtsbeziehung ist nicht erzwingbar. Lediglich die Akzeptanz einer solchen Feststellung könnte erzwungen werden; in diesem Falle jedoch ist nicht \emph{festzustellen}, sondern zu \emph{verpflichten}. Aus diesem Grunde ist eine Feststellungsklage nur subsidiär\index[idx]{Feststellungsklage!Subsidiarität} zuständig, wenn eine Anfechtungs- oder Verpflichtungsklage nicht möglich ist (dazu ausführlich unter \enquote{Zulässigkeit}.
 
