--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -240,7 +240,8 @@ Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in de
 
 \subsection{Schlichtung}
 \label{Anrufung:Kriterien:Schlichtung}
-Nach \S~7 Abs.~1 SGO\index[paridx]{SGO!7@\S~7!1@Abs.~1} ist eine Schlichtung vor der Anrufung der Schiedsgerichtsbarkeit grundsätzlich erforderlich. Damit ist die Schlichtung wie auch die Zuständigkeit (siehe \ref{Anrufung:Kriterien:Zustaendigkeit}) ein besonderes \emph{unechtes Zulässigkeitskriterium}: Diese Kriterien würden in den staatlichen Gerichtsordnungen als \emph{echte Zulässigkeitskriterien} von nicht bloß formaler Natur zu einem Unzulässigkeitsurteil führen. Nach der SGO aber führen sie zu einer Nichteröffnung und sind entsprechend zum Zeitpunkt der Eröffnung abschließend zu beurteilen.
+Grundsätzlich ist nach \S~7 Abs.~1 SGO\index[paridx]{SGO!7@\S~7!1@Abs.~1} ein Schlichtungsversuch vor der Anrufung der Schiedsgerichtsbarkeit erforderlich.
+Damit ist die Schlichtung wie auch die Zuständigkeit (siehe \ref{Anrufung:Kriterien:Zustaendigkeit}) ein besonderes \emph{unechtes Zulässigkeitskriterium}: Diese Kriterien würden in den staatlichen Gerichtsordnungen als \emph{echte Zulässigkeitskriterien} von nicht bloß formaler Natur zu einem Unzulässigkeitsurteil führen. Nach der SGO aber führen sie zu einer Nichteröffnung und sind entsprechend zum Zeitpunkt der Eröffnung abschließend zu beurteilen.
 
 Fehlt es an einem erfolglosen Schlichtungsversuch und ist dieser auch nicht entbehrlich, fehlt der anrufenden Streitpartei das Rechtsschutzinteresse und die Klage ist als unzulässig mit einer Nichteröffnung abzuweisen.
 
@@ -276,10 +277,23 @@ Andere Fälle der Eilbedürftigkeit dürften kaum eintreten.
 
 Die Aussichtslosigkeit oder das Scheitern der Schlichtung unterscheiden sich lediglich dadurch, ob bereits ein Schlichtungsversuch unternommen wurde, oder aber eben dieser gar nicht unternommen wurde, weil er schon gar keine Aussicht auf Erfolg hat. Dabei unterliegt die Wertung des Einzelfalls dem Ermessen der Richter. Aussichtlos dürfte eine Schlichtung immer dann sein, wenn eine Partei in Bezug auf einen konkreten Streit schon von vorn herein ankündigt, für eine Schlichtung nicht zur Verfügung zu stehen, oder wenn es um reine Rechtsfragen wie im Falle des \S~14 Abs.~1 Satz~1 Var.~2 PartG\index[paridx]{PartG!14@\S~14!1@Abs.~1} geht.
 
-Die Entscheidung eines Schiedsgerichts, ob ein solcher Fall vorliegt, ist nach \S~7 Abs.~3 Satz 2 SGO\index[paridx]{SGO!7@\S~7!3@Abs.~3} nicht anfechtbar. Grundsätzlich sind hier zwei Auslegungen denkbar. Erstens eine weite Auslegung: Jede Entscheidung über Satz~1 ist unanfechtbar, eine Nichteröffnungsbeschwerde könnte sich dann nicht gegen eine Feststellung der Erforderlichkeit der Schlichtung in diesem Verfahren richten und zweitens eine enge Auslegung: Nur positive Feststellungen der Entbehrlichkeit der Schlichtung sind unanfechtbar, eine Berufung gegen das Urteil im eröffneten Verfahren könnte sich dann nicht mehr darauf berufen, dass das Verfahren wegen eines erforderlichen, aber nicht erfolgten Schlichtungsversuches gar nicht hätte eröffnet werden dürfen.
+Die Entscheidung eines Schiedsgerichts, ob ein solcher Fall vorliegt, ist nach \S~7 Abs.~3 Satz 2 SGO\index[paridx]{SGO!7@\S~7!3@Abs.~3} nicht anfechtbar.
+Grundsätzlich sind hier zwei Auslegungen denkbar.
+
+Erstens eine weite Auslegung:
+Jede Entscheidung über Satz~1 ist unanfechtbar.
+Eine Nichteröffnungsbeschwerde könnte sich dann nicht gegen die von einem erstinstanzlichen Schiedsgericht festgestellte Erforderlichkeit der Schlichtung in diesem Verfahren richten.
+
+Und zweitens eine enge Auslegung:
+Nur die positive festgestellte Entbehrlichkeit der Schlichtung ist unanfechtbar.
+Eine Berufung gegen das Urteil im eröffneten Verfahren könnte sich dann nicht mehr darauf berufen, dass das Verfahren wegen eines erforderlichen, aber nicht erfolgten Schlichtungsversuches gar nicht hätte eröffnet werden dürfen.
 Das Bundesschiedsgericht hat in seiner Rechtsprechung bisher die enge Auslegung angewendet,\footnote{Vgl. etwa \cites{BSG914H1}{BSG3014HS}.} ohne dies näher zu begründen.
-Das ist auch korrekt: Die Schlichtungserfordernis soll lediglich in den Fällen, in denen eine Schlichtung besser geeignet ist, den Rechtsfrieden wiederherzustellen, dieser den Vorrang geben und nicht jeglichen Rechtsschutz verhindern.
-Daher ist die Hürde nicht zu hoch zu setzen, wenn das Eingangsgericht fälschlich das Vorliegen dieses Verfahrenserfordernisses verneint, ist dagegen Rechtsschutz zu gewähren. Der Sinn und Zweck des Vorrangs des Schlichtungserfordernisses ist nicht gefährdet, wenn das Rechtsmittelgericht dessen Entbehrlichkeit feststellt und das Verfahren eröffnet. Das Gebot des effektiven Rechtsschutzes stützt also diese enge Auslegung. Der Sinn und Zweck der Nichtanfechtbarkeit besteht also lediglich in dem Vertrauensschutz in das Bestehen des Verfahrenserfordernisses nach Eröffnung, damit nicht nachträglich ein Verfahrenserfordernis entzogen werden kann.
+
+Das ist auch korrekt:
+Die Schlichtungserfordernis soll lediglich in den Fällen, in denen eine Schlichtung besser geeignet ist, den Rechtsfrieden wiederherzustellen, dieser den Vorrang geben und nicht jeglichen Rechtsschutz verhindern.
+Daher ist die Hürde nicht zu hoch zu setzen, wenn das Eingangsgericht fälschlich das Vorliegen dieses Verfahrenserfordernisses verneint, ist dagegen Rechtsschutz zu gewähren.
+Der Sinn und Zweck des Vorrangs des Schlichtungserfordernisses ist nicht gefährdet, wenn das Rechtsmittelgericht dessen Entbehrlichkeit feststellt und das Verfahren eröffnet.
+Das Gebot des effektiven Rechtsschutzes stützt also diese enge Auslegung. Der Sinn und Zweck der Nichtanfechtbarkeit besteht also lediglich in dem Vertrauensschutz in das Bestehen des Verfahrenserfordernisses nach Eröffnung, damit nicht nachträglich ein Verfahrenserfordernis entzogen werden kann.
 
 \section{Bescheidung der Eröffnung}
 \label{Anrufung:Beschluss}
