--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -382,7 +382,7 @@ Die Vorschriften über die Eröffnung sind dabei mangels eigener Regelung für d
 
 Eine besondere Aufmerksamkeit gilt fehlerhaften Verweisungsbeschlüssen:
 Diese sind gültig und mangels Rechtsmittelfähigkeit auch nicht im Instanzenzug isoliert angreifbar.
-Ein fehlerhafter Verweisungsbeschluss ist daher rechtswirksam und begründet die Zuständigkeit des Zielgerichtes.\footnote{Vgl. dazu auch TODO:cite GVG BB 13/1?.}
+Ein fehlerhafter Verweisungsbeschluss ist daher rechtswirksam und begründet die Zuständigkeit des Zielgerichtes.\footnote{Vgl. dazu etwa \cite[5]{LSGBB147}.}
 Auch dürfte eine derartige Entscheidung nie vor der ordentlichen Gerichtsbarkeit landen, da immer das Bundesschiedsgericht letzinstanzlich zu Entscheiden hat und eine Beschwer daher nur von dessen Entscheidung ausgehen kann, die dann aber, auch weil das Bundesschiedsgericht eine vollständige Tatsacheninstanz ist, nicht mehr durch den möglichen Entzug des gesetzlichen Richters belastet ist.
 
 
