Keine Befangenheit durch vorläufige Rechtsauffassung

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -141,6 +141,7 @@ Dies ist noch nicht erfüllt, wenn der Richter einer speziellen parteiinternen O
 Ebenfalls genügt dafür nicht, dass der Richter sich bereits früher mal über eine verfahrensrelevante Rechtsfrage geäußert hat,\footnote{\cite{BGHXIZR38801}.} die Partei muss dann damit leben, dass ihr gesetzlicher Richter in einem rechtlichen Meinungsstreit eine gewisse Position vertritt.
 Insbesondere gilt dies in einer Partei, die ihre Richter aus dem Pool aktiver Mitglieder rektrutiert.\footnote{\cites[Lenski][\S~14 Rn~15]{lenski2011parteiengesetz}.}
 Erst recht liegt keine Besorgnis der Befangenheit vor, weil eine Partei davon ausgeht, dass ein Richter anders als von ihr gewünscht entscheiden wird.
+Dies auch dann nicht, wenn das Gericht bereits eine entsprechende vorläufige Rechtsauffassung geäußert hat.\footnote{\cites[S.~6]{BSG20131028}.}
 Unerwünschte Entscheidungen sind bei Gerichten der Regelfall.\footnote{\cites[S.~2]{BSG201305062BefangenheitI}.}
 
 \subsubsection{Rechtsmissbräuchlichkeit der Ablehnung}
