--- a/Organisation.tex
+++ b/Organisation.tex
@@ -1,5 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{Die Organisation der Schiedsgerichte bestimmt sich nach ihrer jeweiligen Geschäftsordnung. Diese muss bestimmten Anforderungen der Schiedsgerichtsordnung genügen. Ansonsten sollte vor allem die Zweckmäßigkeit der Regelungen und auch der verwendeten Infrastruktur (Mailinglisten, Ticketsysteme etc.) im Vordergrund stehen.  Die Richter sollten gleichen Zugriff auf die Gerichtsakten haben. Die Ersatzrichter sollten von Anfang an in die Prozesse des Gerichts eingewiesen werden, um ein Nachrücken so reibungslos wie möglich gestalten zu können. Es empfiehlt sich, dass sich das Gericht regelmäßig fortbildet.}
+\chapterpreamble{Die Organisation der Schiedsgerichte bestimmt sich nach ihrer jeweiligen Geschäftsordnung. Diese muss bestimmten Anforderungen der Schiedsgerichtsordnung genügen. Ansonsten sollte vor allem die Zweckmäßigkeit der Regelungen und auch der verwendeten Infrastruktur (Mailinglisten, Ticketsysteme etc.) im Vordergrund stehen.  Die Richter sollten gleichen Zugriff auf die Gerichtsakten haben. Die Ersatzrichter sollten von Anfang an in die Prozesse des Gerichts eingewiesen werden, um ein Nachrücken so reibungslos wie möglich gestalten zu können. Es empfiehlt sich, dass sich das Gericht regelmäßig fortbildet und (dabei) auch den Kontakt zu anderen Schiedsgerichten nicht abreißen lässt.}
 
 \chapter{Innere Organisation eines Schiedsgerichts}
 
