Satz zu (Kapitel-) Urteilsverzeichnissen korrigiert

--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -21,7 +21,8 @@ Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsge
 Da gerade in der Piratenpartei oft Unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
 Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben. Das Handbuch kann so als Nachschlagewerk genutzt werden.
 
-Die grobe Gliederung des Handbuchs ist an einem üblichen Verfahrenslauf bzw. einer üblichen Fallprüfung orientiert: Die innere Organisation der Schiedsgerichte, z.B. unter Berücksichtigung der Vorschriften über deren Geschäftsordnungen, und Zusammensetzung des Gerichts werden vor der Anrufung durch eine Streitpartei behandelt; die Zulässigkeitsvoraussetzungen der Klage vor den Grundlagen der Satzungsauslegung erläutert. Jedem dieser Kapitel ist ein Verzeichnis der im jeweiligen Kapitel zitierten Urteile vorangestellt. Auch die verwendete Literatur findet sich hier wieder, wobei wir darauf geachtet haben, möglichst elektronisch (und frei) verfügbare Literatur zu verwenden und insgesamt einen ausufernden Fußnotenapparat zu vermeiden.
+Die grobe Gliederung des Handbuchs ist an einem üblichen Verfahrenslauf bzw. einer üblichen Fallprüfung orientiert: Die innere Organisation der Schiedsgerichte, z.B. unter Berücksichtigung der Vorschriften über deren Geschäftsordnungen, und Zusammensetzung des Gerichts werden vor der Anrufung durch eine Streitpartei behandelt; die Zulässigkeitsvoraussetzungen der Klage vor den Grundlagen der Satzungsauslegung erläutert.
+Jedem dieser Kapitel folgt ein Verzeichnis der im jeweiligen Kapitel zitierten Urteile. Auch die verwendete Literatur findet sich hier wieder, wobei wir darauf geachtet haben, möglichst elektronisch (und frei) verfügbare Literatur zu verwenden und insgesamt einen ausufernden Fußnotenapparat zu vermeiden.
 
 \Zitat{Zwei Juristen, drei Meinungen} lautet ein geflügeltes Wort.
 Einen Anspruch auf Vollständigkeit der Darstellung erheben wir nicht. Dem Anspruch einer vollständigen Widergabe aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
