--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -1,5 +1,5 @@
 %\begin{refsection}
-\chapterpreamble{\Zitat{Verträge sind so auszulegen, wie Treu und Glauben mit Rücksicht auf die Verkehrssitte es erfordern.} – \S~157~\nomenclature{BGB}{Bürgerliches Gesetzbuch}\index[paridx]{BGB!\S~157}}
+\chapterpreamble{\Zitat{Verträge sind so auszulegen, wie Treu und Glauben mit Rücksicht auf die Verkehrssitte es erfordern.} – \S~157~BGB\nomenclature{BGB}{Bürgerliches Gesetzbuch}\index[paridx]{BGB!\S~157}}
 
 \chapter{Grundlagen der Normenauslegung}
 % Ein paar einleitende, warme Worte.(?)
