--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -13,13 +13,14 @@ Wo es aber um Macht geht, wird gestritten.
 Und das nicht selten.
 Das war selbst dem Gesetzgeber bewusst.
 
-Um die \emph{Staatsferne der Parteien}\index[idx]{Partei!Staatsferne} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
+Um die \emph{Staatsferne der Parteien} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
 Parteischiedsgerichte handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
 
 Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG\index[paridx]{PartG!\S~14!Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
 
 Da gerade in der Piratenpartei oft Unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
-Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben. Das Handbuch kann so als Nachschlagewerk genutzt werden.
+Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben.
+Das Handbuch kann so als Nachschlagewerk genutzt werden.
 
 Die grobe Gliederung des Handbuchs ist an einem üblichen Verfahrenslauf bzw. einer üblichen Fallprüfung orientiert:
 Die innere Organisation der Schiedsgerichte, z.B. unter Berücksichtigung der Vorschriften über deren Geschäftsordnungen, und Zusammensetzung des Gerichts werden vor der Anrufung durch eine Streitpartei behandelt; die Zulässigkeitsvoraussetzungen der Klage vor den Grundlagen der Satzungsauslegung erläutert.
@@ -28,7 +29,7 @@ Auch die verwendete Literatur findet sich hier wieder, wobei wir darauf geachtet
 
 \Zitat{Zwei Juristen, drei Meinungen} lautet ein geflügeltes Wort.
 Einen Anspruch auf Vollständigkeit der Darstellung erheben wir nicht.
-Dem Anspruch einer vollständigen Widergabe aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
+Dem Anspruch einer umfassenden Widergabe aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
 Das vorliegende Handbuch soll keine Kommentierung sein, sondern ein praktischer Leitfaden.
 Das reduziert den Umfang um tiefgehende juristische Auseinandersetzung mit dem einen oder anderen Problem unserer Satzung --- lässt aber dennoch beträchtlichen Raum für den Umfang des Werkes übrig.
 Wir haben daher beschlossen, das Handbuch etappenweise zu vervollständigen und uns dabei an der Rechtsprechung des Bundesschiedsgerichtes und der Landesschiedsgerichte zu orientieren und so die typischen Probleme und Konstellationen dazustellen, mit denen Richter in der Parteienschiedsgerichtbarkeit konfrontiert sein werden.
