--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -18,6 +18,7 @@ Auch sonst sollte die Sprache möglichst einfach gehalten sein:
 Ein gutes Urteil kommt ohne komplexe Schachtelsätze aus.
 
 \section{Das Rubrum}
+\index[idx]{Rubrum}
 Unter der Überschrift \Zitat{Urteil zu (Aktenzeichen)} beginnt das Urteil mit der Aufzählung (inkl. Anschriften) der Streitparteien, ihrer jeweiligen Vertretung und der Streitsache.
 Dieser erste Teil eines Urteils wurde früher einmal rot gedruckt und wird daher traditionell als \enquote{Rubrum} (lat. \enquote{rot}) bezeichnet.
 
@@ -44,9 +45,11 @@ Hierfür bieten sich arabische Nummerierung und ein Neubeginn jeweils bei 1 bei 
 In einem Berufungsverfahren wird die Bezeichnung als \enquote{Antragstellerin} oder \enquote{Antragsgegnerin} jeweils um die Bezeichnung als \enquote{Berufungsführerin} bzw. \enquote{Berufungsgegnerin} erweitert (bspw. \Zitat{Antragstellerin und Berufungsführerin} oder \Zitat{Antragstellerin und Berufungsgegnerin}).
 
 \section{Tenor}
+\index[idx]{Tenor}
+\index[idx]{Urteilstenor|see{Tenor}}
 Der Tenor enthält die Entscheidung (oder die Entscheidungen) in der Hauptsache.
 
-Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1} kann eine Kostenentscheidung entfallen.
+Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1} kann eine Kostenentscheidung\index[idx]{Kosten!Entscheidung} entfallen.
 Auch einer Entscheidung über vorläufige Vollstreckbarkeit\index[idx]{Vollstreckung!vorläufige} bedarf es nicht, da die SGO weder Vollstreckungsvorschriften vorsieht, noch Maßnahmen zur Zwangsvollstreckung kennt.
 Ebenso ist nicht notwendig, ein mögliches Rechtsmittel im Tenor aufzuführen, da über die Möglichkeit von Rechtsmitteln nicht durch das Gericht entschieden wird:
 Die Entscheidung, ob Rechtsmittel möglich sind, oder nicht, wird von der SGO getroffen.
@@ -64,13 +67,14 @@ Die \enquote{Vollstreckbarkeit} eines Tenors bedeutet also, dass auch hohen Ansp
 Die prinzipielle \enquote{Vollstreckbarkeit} liegt dann vor, wenn stets eindeutig feststellbar ist, ob die durch das Urteil Verpflichteten ihren jeweiligen Verpflichtungen nachkommen bzw. nachgekommen sind oder nicht.
 Dies dient einerseits der Verständlichkeit des Urteils, andererseits kann es ggf. auch die Durchsetzung vor einem staatlichen Gericht ermöglichen oder vereinfachen.
 
-Der einzige Tenor, der nicht der Vollstreckbarkeit zugänglich ist, ist die \emph{Feststellung}.
+Der einzige Tenor, der nicht der Vollstreckbarkeit zugänglich ist, ist die \emph{Feststellung}.\index[idx]{Feststellungsklage!Tenor}
 Anstatt durch Urteil Rechte oder Pflichten aufzuerlegen, wird hier lediglich das Bestehen oder Nichtbestehen eines bestimmten Rechtsverhältnisses festgestellt (bspw. die Nichtigkeit einer Satzungsänderung oder einer Wahl).
 Diese Feststellung ist so nicht vollstreckbar; die Existenz oder Nichtexistenz einer Rechtsbeziehung ist nicht erzwingbar.
 Lediglich die Akzeptanz einer solchen Feststellung könnte erzwungen werden; in diesem Falle jedoch ist nicht \emph{festzustellen}, sondern zu \emph{verpflichten}.
 Aus diesem Grunde ist eine Feststellungsklage nur subsidiär\index[idx]{Feststellungsklage!Subsidiarität} zuständig, wenn eine Anfechtungs- oder Verpflichtungsklage nicht möglich ist (dazu ausführlich unter \enquote{Zulässigkeit}).
 
 \section{Sachverhalt}
+\index[idx]{Sachverhalt}
 Gemäß \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~3~S.~1~SGO} enthält ein Urteil unter anderem eine Sachverhaltsdarstellung.
 In diesem Abschnitt sind die tatsächlichen Feststellungen, die der Entscheidung des Gerichts zu Grunde liegen, objektiv und neutral aufzuführen.
 Er muss aus sich heraus verständlich sein, Verweise sollten nur ausnahmsweise verwendet werden; insbesondere muss hier sichergestellt sein, dass die entsprechende Quelle auch nach geraumer Zeit noch verfügbar sein wird.
@@ -115,6 +119,7 @@ Widerspricht das Gericht der Rechtsauffassung einer der Parteien (oder gar beide
 Da im Rahmen der Schiedsgerichtsbarkeit der Piratenpartei keine Kostenentscheidung getroffen werden muss (s.o.), erübrigt sich auch die Begründung einer solchen.
 
 \subsection{Obiter Dicta}
+\index[idx]{obiter dictum}
 Ein \emph{obiter dictum} (lat. \emph{das nebenbei Gesagte}) ist eine rechtliche Ausführung zur Urteilsfindung, die über das Erforderliche hinausgeht und auf der das Urteil dementsprechend nicht beruht.\footnote{\url{http://www.duden.de/rechtschreibung/Obiter_Dictum}.}
 \emph{Obiter dicta} müssen sich dementsprechend stets entgegenhalten lassen, dass sie im Urteilstext eigentlich überflüssig und damit wegzulassen wären.
 Auf der anderen Seite kann ein \emph{obiter dictum} zur Rechtsfortbildung beitragen, etwa indem eine streitentscheidende Norm über ihren Beitrag zum vorliegenden Streit hinaus ausgelegt oder kommentiert wird.
@@ -128,19 +133,23 @@ Die sich im Umkehrschluss ergebende Gefahr besteht darin, dass spätere Verfahre
 Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsbarkeit der Piratenpartei häufiger und ausführlicher vorkommen dürfte – und darf – als das bei staatlichen Gerichten der Fall ist, ist bei ihrer Verwendung äußerste Vorsicht geboten.
 
 \subsection{Abweichende Meinungen}
+\index[idx]{Sondervotum}
+\index[idx]{Abweichende Meinung|see{Sondervotum}}
 Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.}
 Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}).
 In der Piratenpartei steht es allen Richterinnen und Richtern zu, unabhängig von der Ebene ihres Schiedsgerichts.
-Die Bestimmung zu Sondervoten stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.
+Die Bestimmung zu Sondervoten stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.\index[idx]{Verschwiegenheitspflicht}
 
 Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird.
 Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen.
 Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen und sie gesondert kenntlich zu machen, anstatt sie über die Urteilsbegründungen zu verteilen.
-Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
+Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen.
+Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
 
 Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\index[paridx]{SGO!\S12!Abs.~4}.
 
 \section{Die Rechtsmittelbelehrung}
+\index[idx]{Rechtsmittelbelehrung}
 Eine Rechtsmittelbelehrung soll gemäß \S~12 Abs.~5~SGO\index[paridx]{SGO!\S~12!Abs.~5} zumindest dann erfolgen, wenn gegen das Urteil die Berufung möglich ist.
 Die Vorschrift ist allerdings dahin auszulegen, dass die Parteien stets über mögliche Rechtsmittel belehrt werden sollen.
 
@@ -156,14 +165,16 @@ Ebenso ist die Frist zu nennen, wobei sie nicht berechnet werden muss:
 Es reicht aus, die Parteien darüber zu belehren, dass die Berufungsfrist gemäß \S~13 Abs.~2 S.~1~SGO\index[paridx]{SGO!\S~13!Abs.~2} 14~Tage beträgt, sie muss nicht in einem genauen Datum angegeben werden.
 Diese Berechnung führt im Zweifel das Berufungsgericht aus, das an die Entscheidung der unteren Instanz ohnehin nicht gebunden wäre; die Gefahr, dass die Rechtsmittelbelehrung durch eine falsche Fristberechnung unrichtig wird, kann so umgangen werden.
 
-Die Rechtsmittelbelehrung ist nur für Berufungen normiert.
-Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch} gegen einstweilige Anordnung (\S~11 Abs.~4~SGO)\index[paridx]{SGO!\S~11!Abs.~4} und die \emph{sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (\S~11 Abs.~6~SGO)\index[paridx]{SGO!\S~11!Abs.~6}, die Nichteröffnung (\S~8 Abs.~6 S.~3~SGO)\index[paridx]{SGO!\S~8!Abs.~6} oder Verzögerung eines Verfahrens (\S~10 Abs.~8 S.~1,~2~SGO)\index[paridx]{SGO!\S~10!Abs.~9}, sowie den Nichtausschluss eines Richters vom Verfahren nach erfolgter Ablehnung (\S~5 Abs.~6 S.~2~SGO)\index[paridx]{SGO!\S~5!Abs.~6}.
+Die Rechtsmittelbelehrung ist nur für Berufungen normiert.\index[idx]{Rechtsmittel!Berufung}
+Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch}\index[idx]{Rechtsmittel!Widerspruch} gegen einstweilige Anordnung (\S~11 Abs.~4~SGO)\index[paridx]{SGO!\S~11!Abs.~4} und die \emph{sofortige Beschwerde}\index[idx]{Rechtsmittel!sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (\S~11 Abs.~6~SGO)\index[paridx]{SGO!\S~11!Abs.~6}, die Nichteröffnung (\S~8 Abs.~6 S.~3~SGO)\index[paridx]{SGO!\S~8!Abs.~6} oder Verzögerung eines Verfahrens (\S~10 Abs.~8 S.~1,~2~SGO)\index[paridx]{SGO!\S~10!Abs.~9}, sowie den Nichtausschluss eines Richters vom Verfahren nach erfolgter Ablehnung (\S~5 Abs.~6 S.~2~SGO)\index[paridx]{SGO!\S~5!Abs.~6}.
 Im Gegensatz zu den Dokumentationsvorschriften ist eine Anwendbarkeit der Vorschriften über die Rechtsmittelbelehrung auf diese Institute in der Schiedsgerichtsordnung nicht explizit vorgesehen.
 Die Abhängigkeit einer Belehrung über Verfahrensschritte im Rechtsschutz sollte allerdings von der konkreten Verfahrensart unabhängig sein.
 Es ist daher eher anzunehmen, dass die Vorschriften über die Belehrung zum Rechtsmittel \emph{Berufung} auf die anderen Rechtsmittel der SGO analog anzuwenden sind.
 Insbesondere eine korrekte Belehrung schadet in keinem Falle.
 
 \subsection{Unrichtige oder unterbliebene Rechtsmittelbelehrung}
+\index[idx]{Rechtsmittelbelehrung!unrichtige}
+\index[idx]{Rechtsmittelbelehrung!fehlende}
 Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2}.\footnote{Anderer Ansicht ist neuerdings das Bundesschiedsgericht, nach dem eine solche, dem §~58~VwGO entsprechende Regelung, in der SGO nicht enthalten ist, \cite{BSGPP100132493}.}
 Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist.
 Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
