--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -77,6 +77,8 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \input{Instanzenzug.tex}
 
+\backmatter
+\pagenumbering{roman}
 \appendix
 \onecolumn
 
