--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -138,9 +138,9 @@ Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsb
 Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.}
 Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}).
 In der Piratenpartei steht es allen Richterinnen und Richtern zu, unabhängig von der Ebene ihres Schiedsgerichts.
-Die Bestimmung zu Sondervoten stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.\index[idx]{Verschwiegenheitspflicht}
+Die Bestimmung zu solchen abweichenden Meinungen (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.\index[idx]{Verschwiegenheitspflicht}
 
-Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird.
+Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird.
 Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen.
 Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen und sie gesondert kenntlich zu machen, anstatt sie über die Urteilsbegründungen zu verteilen.
 Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen.
